--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -8,7 +8,7 @@
 .bar {
   background-color: $base;
   color: $text;
-  padding: 5px;
+  padding: 0.2em;
   font-family: "FantasqueSansM Nerd Font Mono";
 }
 
@@ -16,7 +16,9 @@
 /* -- General --------------------------------------------------------------- */
 .bubble {
   background-color: $mantle;
-  padding: 0.4em;
+  padding: 0.2em;
+  padding-left: 0.4em;
+  padding-right: 0.4em;
   border-radius: 17em;
   margin-left: 0.2em;
   margin-right: 0.2em;
@@ -59,7 +61,7 @@
 /* -- Status Indicators ------------------------------------------------------ */
 .status {
   background-color: $mantle;
-  padding: 0.4em;
+  padding: 0.1em;
   border-radius: 17em;
   margin-left: 0.2em;
   margin-right: 0.2em;
@@ -84,8 +86,8 @@
 }
 
 .systray {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 /* -- Workspaces ------------------------------------------------------------ */
@@ -94,7 +96,7 @@
   font-size: 1.6em;
   color: $text;
   background-color: $surface0;
-  border-radius: 1.6em;
+  border-radius: 100em;
   margin-left: 0.5em;
   margin-right: 0.5em;
 
@@ -113,5 +115,5 @@
 .workspaces {
   background-color: $mantle;
   border-radius: 17em;
-  padding: 0.4em;
+  padding: 0.2em;
 }
